# claudex

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
src/: api.rs  auth.rs  main.rs
src/agy/: api.rs  auth.rs  mod.rs  model_tier.rs
src/codex/: api.rs  auth.rs
src/commands/: agy_usage.rs  codex_usage.rs  glm_usage.rs  grok_usage.rs  kimi_usage.rs  mod.rs  self_update.rs  status.rs  update.rs  usage.rs  usage_all.rs
src/glm/: api.rs  auth.rs
src/grok/: api.rs  auth.rs
src/kimi/: api.rs  auth.rs
