[package]
name = "claudex"
version = "0.2.2"
edition = "2024"
description = "A CLI that extends the Claude Code CLI with extra commands, starting with `claudex usage` for plan usage limits."
license = "MIT"
repository = "https://github.com/reedchan7/claudex"
homepage = "https://github.com/reedchan7/claudex"
authors = ["Reed Chan <xinyuchen77@gmail.com>"]
keywords = ["claude", "cli", "usage", "anthropic"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "claudex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
iana-time-zone = "0.1"
terminal_size = "0.4"
